--- a/assets/css/partials/theme.pcss
+++ b/assets/css/partials/theme.pcss
@@ -83,3 +83,13 @@
     & > :nth-child(3) { width: 9% !important; }
   }
 }
+
+.post-type-archive-resources {
+  & .beefup__body > div {
+    @screen lg {
+      & > * { box-sizing: border-box; }
+      & > :nth-child(1) { width: calc(28% + 1px) !important; }
+      & > :nth-child(2) { width: calc(72% - 1px) !important; }
+    }
+  }
+}
