--- a/assets/css/partials/theme/_theme.scss
+++ b/assets/css/partials/theme/_theme.scss
@@ -208,12 +208,4 @@
     flex: 0 0 14.3333333333% !important;
     max-width: 14.333333% !important;
   }
-
-  .beefup__right-col {
-    width: 61.5% !important;
-  }
-
-  .beefup__left-col {
-    width: 38.45% !important;
-  }
 }
